Version 2.1.144
    Fixed a bug where Deflect worked against non-arrow projectiles
    Fixed a bug where Deflect was checked twice, resulting in two chances to deflect effectively
    Fixed a bug where Roll wouldn't award XP when fall height was over a certain amount
    Lowered the XP ceiling of Roll
    Fixed a NPE that would happen involving taming in combat processing
    Updated hu_HU locale (thanks andris155)
    mmodebug mode now prints some information when fuel efficiency is applied to a furnace

    NOTES:
    I seem to consistently find old bugs in mcMMO, this deflect bug where it was checked twice, who knows how many years its been in mcMMO, I didn't check but its probably between 5-7.

Version 2.1.143
    mcMMO now tracks super ability boosted items through persistent metadata
    mcMMO no longer relies on lore to tell if an item has been modified by a super ability
    Slight buff to Rupture (1 more tick duration across all ranks)
    Lore no longer gets added to items being buffed by mcMMO./

    NOTES:
        The item tracking is persistent for MC versions 1.13-1.16.2 (and beyond). However the code handling the persistence for 1.13.2 differs from the other versions. It shouldn't result in any problems.
        Any items that currently have the old "mcMMO Ability Tool" lore on them will have that lore stripped off them and will have any dig speed enchants removed. This should only affect glitched items that never properly got their buffs removed.

Version 2.1.142
    Iron Arm Style renamed to Steel Arm Style
    Steel Arm Style now scales over 20 ranks instead of 5
    Added 'mcmmo.ability.unarmed.steelarmstyle' permission node
    Removed 'mcmmo.ability.unarmed.ironarmstyle' permission node
    Added locale entry 'Unarmed.SubSkill.SteelArmStyle.Name'
    Added locale entry 'Unarmed.SubSkill.SteelArmStyle.Description'
    Updated locale entry 'Unarmed.Ability.Bonus.0'

Version 2.1.141
    Added some missing values for 1.16.2 compatibility modes
